Source/istio/egress/egress.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: google-ext
# spec:
#   hosts:
#   - www.google.com
#   ports:
#   - number: 443
#     name: https
#     protocol: HTTP
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: google-ext
# spec:
#   host: www.google.com
#   trafficPolicy:
#     tls:
#       mode: SIMPLE # initiates HTTPS when talking to www.google.com
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: httpbin-ext
# spec:
#   hosts:
#   - www.httpbin.org
#   ports:
#   - number: 80
#     name: http
#     protocol: HTTP
# ---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: chairs-ext
spec:
  hosts:
  - www.httpbin.org 
  ports:
  - number: 80
    name: http
    protocol: HTTP  
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-ext
spec:
  hosts:
    - somebackend.com
  http:
  - route:
    - destination:
        host: www.httpbin.org
---
